Fixed footer not showing particle effect bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1652,27 +1652,19 @@
     right: 0;
     bottom: 0;
 	left: 0;
-	width: 100%;
-	height: 100%;
-    overflow: auto;
+    overflow: scroll;
     z-index: 2;
     background: black;
     opacity: 0.5;
 }
 
 .particles-js {
-	position: fixed;
-	width:100%;
-	height:100%;
-	padding: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-    overflow: hidden;
+    width: 150%;
+    height: 150%;
+    position: fixed;
     z-index: 2;
+    top: 0;
+    left: 0;
     background: black;
     opacity: 0.6;
 }
